<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyRATPbyESGI</string>
    <string name="action_settings">Settings</string>

    <!-- Splash Screen -->
    <string name="title_activity_splash_screen">MyRATPbyESGI</string>
    <string name="splashscreencontentdescription">SplashScreen</string>

    <!-- Home -->
    <string name="underground">METRO</string>
    <string name="bus">BUS</string>
    <string name="tramway">TRAMWAY</string>
    <string name="rer">RER</string>
    <string name="settings">SETTINGS</string>

    <!-- Settings -->
    <string name="purgeData">Purge data</string>
    <string name="loadData">Load data</string>
    <string name="waitTitle">Please wait&#8230;</string>
    <string name="waitDescriptionPurge">Database cleaning</string>
    <string name="waitDescriptionLoad">Database filling with RATP data (CSV files)</string>
    
    <!-- Errors -->
    <string name="err_loading_view">Error while trying to load a view.</string>
    <string name="nodescription">nodescription.</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_lines">LinesActivity</string>

    <!-- Lines -->
    <string name="tvsearch">Search</string>
    <string name="title_activity_line_stations">LineStationsActivity</string>
    <string name="title_activity_add_station">AddStationActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_station">StationActivity</string>
    
    <!-- Add Station -->
    <string name="titleAddStation">New station</string>
    
    <!-- Stations -->
    <string name="fieldStationID">ID</string>
    <string name="fieldStationLine">Line</string>
    <string name="fieldStationName">Name</string>
    <string name="fieldStationLatitude">Latitude</string>
    <string name="fieldStationLongitude">Longitude</string>
    <string name="fieldStationLocalisation">Localisation</string>
    <string name="fieldStationType">Type</string>
    <string name="stationSave">Save changes</string>
    <string name="msgDelete">Are you sure you want to delete this station ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="msgUpdateOK">Station has been updated</string>
    <string name="msgUpdateError">Error while updating this station</string>
    <string name="msgInsertOK">Station has been added</string>
    <string name="msgInsertError">Error while adding new station</string>
    <string name="stationAddNew">Add new station</string>
	<string name="msgErrorFieldsNotCompleted">You must complete all fields</string>
	<string name="msgErrorStationExists">This station already exists</string>
	
</resources>
