<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.esgi.ratp.StationActivity" >

    <TextView
        android:id="@+id/tvTitleStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/ivStation"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivStation"
        android:layout_width="32dp"
        android:contentDescription="@string/nodescription"
        android:layout_height="32dp"
        android:layout_alignBottom="@id/tvTitleStation"
        android:layout_alignTop="@id/tvTitleStation"
        android:src="@drawable/station" />

    <!-- ID -->
    
    <TextView
        android:id="@+id/tvStationID"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etStationID"
        android:layout_alignTop="@+id/etStationID"
        android:layout_below="@+id/tvTitleStation"
        android:gravity="center_vertical"
        android:text="@string/fieldStationID"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etStationID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivStation"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/tvStationID"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="text"
        android:enabled="false"/>
    
    <!-- Name -->
    
    <TextView
        android:id="@+id/tvStationName"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etStationName"
        android:layout_alignTop="@+id/etStationName"
        android:layout_below="@+id/tvStationID"
        android:gravity="center_vertical"
        android:text="@string/fieldStationName"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etStationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etStationID"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/tvStationName"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="text"/>
    
    <!-- Latitude -->
    
    <TextView
        android:id="@+id/tvStationLatitude"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etStationLatitude"
        android:layout_alignTop="@+id/etStationLatitude"
        android:layout_below="@+id/tvStationName"
        android:gravity="center_vertical"
        android:text="@string/fieldStationLatitude"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etStationLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etStationName"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/tvStationLatitude"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="text"/>
    
    <!-- Longitude -->
    
    <TextView
        android:id="@+id/tvStationLongitude"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etStationLongitude"
        android:layout_alignTop="@+id/etStationLongitude"
        android:layout_below="@+id/tvStationLatitude"
        android:gravity="center_vertical"
        android:text="@string/fieldStationLongitude"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etStationLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etStationLatitude"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/tvStationLongitude"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="text"/>
    
    <!-- Localisation -->
    
    <TextView
        android:id="@+id/tvStationLocalisation"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etStationLocalisation"
        android:layout_alignTop="@+id/etStationLocalisation"
        android:layout_below="@+id/tvStationLongitude"
        android:gravity="center_vertical"
        android:text="@string/fieldStationLocalisation"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etStationLocalisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etStationLongitude"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/tvStationLocalisation"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="text"/>
    
    <!-- Type -->
    
    <TextView
        android:id="@+id/tvStationType"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etStationType"
        android:layout_alignTop="@+id/etStationType"
        android:layout_below="@+id/tvStationLocalisation"
        android:gravity="center_vertical"
        android:text="@string/fieldStationType"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etStationType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etStationLocalisation"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/tvStationType"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="text"
        android:enabled="false" />

    <Button
        android:id="@+id/btSave"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etStationType"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:text="@string/stationSave" />

</RelativeLayout>